Fix summary stats position on small desktop

--- a/src/components/Buttons/Buttons.module.less
+++ b/src/components/Buttons/Buttons.module.less
@@ -42,7 +42,7 @@
 
   &.secondary {
     background-color: var(--bg-primary);
-    border-color: 1px solid var(--accent-primary);
+    border-color: var(--accent-primary);
 
     &:hover {
       border: 1px solid var(--accent-secondary);
