--- a/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
+++ b/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
@@ -113,6 +113,7 @@
   p:last-child {
     color: var(--content-primary);
     font: var(--body-text-md);
+    text-align: right;
   }
 
   @media (max-width: 960px) {
