--- a/src/pages/LoansPage/components/LoansActiveTable/LoansActiveTable.module.less
+++ b/src/pages/LoansPage/components/LoansActiveTable/LoansActiveTable.module.less
@@ -90,6 +90,10 @@
   @media (max-width: 960px) {
     width: 100%;
     align-items: space-between;
+
+    & > div {
+      align-items: center;
+    }
   }
 
   @media (max-width: 768px) {
