--- a/src/pages/LoansPage/components/LoansHistoryTable/LoansHistoryTable.module.less
+++ b/src/pages/LoansPage/components/LoansHistoryTable/LoansHistoryTable.module.less
@@ -65,10 +65,20 @@
   @media (max-width: 960px) {
     width: 100%;
     align-items: space-between;
+
+    & > div {
+      align-items: center;
+    }
   }
 
   @media (max-width: 768px) {
     gap: 8px 8px;
+  }
+}
+
+.summaryButton {
+  @media (max-width: 960px) {
+    width: 100%;
   }
 }
 
